--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
@@ -17,6 +20,12 @@ allprojects {
     repositories {
         jcenter()
         google()
+        jcenter()
+        maven {
+            url "https://jitpack.io"
+        }
+        maven { url 'https://mapbox.bintray.com/mapbox' }
+        maven { url 'https://maven.google.com' }
     }
 }
 
