--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.karumi:dexter:4.2.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.asksira.android:bsimagepicker:1.2.2'
+    implementation 'id.zelory:compressor:2.1.0'
 
     // annotationProcessor
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
